--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,17 +2,19 @@
   .UserName
     .TopItems
       .TopItems--name
-        masa
+        = current_user.name
       .TopItems--icons
         .edit
-          = link_to "#" do
-            = icon('fas', 'edit')
+          = link_to new_group_path do
+            = icon('fas', 'pen-square', class: 'icon')
         .cog
-          = link_to "#" do
-            = icon('fas', 'cog')
+          = link_to edit_user_path(current_user) do
+            = icon('fas', 'cog', class: 'icon')
   .SideBar__GroupList
-    .items
-      .name
-        techcamp
-      .message
-        メッセージ
+    - current_user.groups.each do |group|
+      .items
+        = link_to '#' do
+          .name
+            = group.name
+          .message
+            メッセージはまだありません。
