--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,9 @@
-@import "reset";
-@import "colors";
-@import "config/colors";
-@import "modules/messages";
-@import "font-awesome-sprockets";
+@import 'font-awesome-sprockets';
 @import "font-awesome";
-@import "modules/user";
-@import "modules/flash";
-@import "modules/group";
+@import "config/colors";
+@import "config/font-size";
+@import "config/reset";
+@import "mixins/vendor_prefix";
+@import "modules/side_bar";
+@import "modules/chat";
+@import "messages/messages.scss"
